# inkplate-dashboard

./: .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml
.github/workflows/: docker-image.yml
firmware/: platformio.ini
firmware/src/: config.h.example  main.cpp
inkplate_dashboard/: app.py  chrome.py  config.py  constants.py  display.py  state.py  utils.py  web.py
inkplate_dashboard/sources/: rss.py  weather.py
inkplate_dashboard/styles/: styles.scss
inkplate_dashboard/templates/: display.html  widget-headlines.html  widget-large-headline.html  widget-weather.html
